--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ function login(){
   const p=document.getElementById('pass').value;
   const err=document.getElementById('error');
   err.style.display='none';
-  if(p==="@Finorix"){
+  if(p==="@Finorix@"){
     // access granted effect
     document.querySelector('.login-box').style.transition='200ms';
     document.querySelector('.login-box').style.transform='scale(0.99)';
